fix action buttons alignment
close #26

--- a/asset/css/metadata-browse.css
+++ b/asset/css/metadata-browse.css
@@ -2,6 +2,11 @@
     display: none;
 }
 
+.actions a:before {
+    line-height: 36px;
+    margin-right: 3px;
+}
+
 .field.delete {
     background-color: #fcc;
 }
